--- a/src/Runtime.Mapper.Tests/Runtime.Mapper.Tests.csproj
+++ b/src/Runtime.Mapper.Tests/Runtime.Mapper.Tests.csproj
@@ -47,7 +47,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -58,6 +60,9 @@
     <Compile Include="Models.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScenarioHelper.cs" />
+    <Compile Include="MapperTest_DeepCopyTo_Primitives_Int.cs" />
+    <Compile Include="MapperTest_DeepCopyTo_Primitives_Guid.cs" />
+    <Compile Include="MapperTest_DeepCopyTo_Primitives_Enum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Runtime.Mapper\Runtime.Mapper.csproj">
